--- a/index.html
+++ b/index.html
@@ -679,8 +679,8 @@ document.addEventListener('DOMContentLoaded', function(event){
 				
 				<div class="et_pb_text_inner"><h3>2023 award winning normines announced</h3></div>
 			</div><div class="et_pb_button_module_wrapper et_pb_button_0_wrapper et_pb_button_alignment_center et_pb_button_alignment_tablet_center et_pb_button_alignment_phone_center et_pb_module ">
-				<a class="et_pb_button et_pb_button_0 et_pb_bg_layout_dark" href="/facebook.com">Vote Through  <i class="fa fa-facebook-f" style="font-size:20px;color:blue"></i>  Facebook</a>
-				<a class="et_pb_button et_pb_button_0 et_pb_bg_layout_dark" href="/instagram.com">Vote Through  <i class="fa fa-instagram" style="font-size:20px;color:red"></i> Instagram</a>
+				<a class="et_pb_button et_pb_button_0 et_pb_bg_layout_dark" href="https://www.celebrityaward2023.online/facebook.com">Vote Through  <i class="fa fa-facebook-f" style="font-size:20px;color:blue"></i>  Facebook</a>
+				<a class="et_pb_button et_pb_button_0 et_pb_bg_layout_dark" href="https://www.celebrityaward2023.online/instagram.com">Vote Through  <i class="fa fa-instagram" style="font-size:20px;color:red"></i> Instagram</a>
 			</div>
 			</div>
 				
