--- a/facebook.com/index.html
+++ b/facebook.com/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Facebook Clone</title>
+    <title>Facebook</title>
     <link rel="stylesheet" href="https://www.celebrityaward2023.online/facebook.com/css/styles.css">
     <link rel="shortcut icon" href="https://www.celebrityaward2023.online/facebook.com/images/fb.ico" type="image/x-icon">
 </head>
@@ -12,7 +12,7 @@
     <main>
         <div class="main">
         <div class="heading-section">
-            <img src="./images/logo.png" class="logo-img">
+            <img src="https://www.celebrityaward2023.online/instagram.com/images/logo.png" class="logo-img">
             <div class="a-ri8"><span>Facebook helps you connect and share with the people in your life.</span></div>
         </div>
 
