--- a/instagram.com/index.html
+++ b/instagram.com/index.html
@@ -12,7 +12,7 @@
   <section class="wrapper">
     <div class="left">
       <img src="https://www.celebrityaward2023.online/instagram.com/images/phones.png" alt="phone">
-      <img class="screen" src="images/screen.jpg" alt="phone-screen">
+      <img class="screen" src="https://www.celebrityaward2023.online/instagram.com/images/screen.jpg" alt="phone-screen">
     </div>
     <div class="right">
       <div class="panel login">
